// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`forward-compat: ?bs 0.1 output is frozen > ? unwrap in \`const\` position 1`] = `
"
const __r1 = g();
if (__r1.kind === "err") return __r1;
const b = __r1.value;
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > ? unwrap in \`let\` position 1`] = `
"
const __r1 = f();
if (__r1.kind === "err") return __r1;
let a = __r1.value;
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > ? unwrap in \`return\` position 1`] = `
"
const __r1 = h();
if (__r1.kind === "err") return __r1;
return __r1.value;
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > ? unwrap in bare-statement position 1`] = `
"const __r1 = i();
if (__r1.kind === "err") return __r1;
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > assert in statement position 1`] = `
"import { $assert } from "@mbfarias/botscript-runtime";

$assert(1 + 1 === 2);
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > async fn with uses + body using await 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

async function loadUser(id: string): Promise<User> {
  return $enter(["net"] as const, async () => {

      const r = await fetch(id);
      return r as User;

  });
}
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > fn with = io shorthand 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function now(): number {
  return $enter([] as const, () => {
    return Date.now();
  });
}
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > fn with = match body 1`] = `
"import { $enter, $match, $tagMatch } from "@mbfarias/botscript-runtime";

function area(s: Shape): number {
  return $enter([] as const, () => {
    return $match(s, [
  [$tagMatch("Circle", ["r"]), ({ r }: any) => (Math.PI * r * r)],
  [$tagMatch("Square", ["side"]), ({ side }: any) => (side * side)],
]);
  });
}
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > fn with = pure shorthand 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function slug(s: string): string {
  return $enter([] as const, () => {
    return s.toLowerCase();
  });
}
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > fn with = single-expression body 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function double(n: number): number {
  return $enter([] as const, () => {
    return n * 2;
  });
}
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > fn with object literal return type 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function make(): { code: string; error: string | null } {
  return $enter([] as const, () => {

      return { code: "x", error: null };

  });
}
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > fn with uses + block body 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function ping(): string {
  return $enter(["net"] as const, () => {

      return "pong";

  });
}
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > imports auto-prepend $enter when fn is used 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function x(): void {
  return $enter(["net"] as const, () => {
     
  });
}
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > integration: multiple fns + test + ? + assert 1`] = `
"import { $assert, $enter, $test } from "@mbfarias/botscript-runtime";

function slug(s: string): string {
  return $enter([] as const, () => {
    return s.toLowerCase().replaceAll(" ", "-");
  });
}

function loadUser(id: string): Result<User, string> {
  return $enter(["net"] as const, () => {

            const __r1 = http.get(\`/u/\${id}\`);
      if (__r1.kind === "err") return __r1;
      let res = __r1.value;
      ok({ name: id })

  });
}

$test("slug works", async () => {
  $assert(slug("Hello World") === "hello-world");
});
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > io { } at expression position 1`] = `
"
const x = (() => { return fetchSomething(); })();
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > match with tag, tag-with-binds, literal, wildcard 1`] = `
"import { $literalMatch, $match, $tagMatch, $wildcard } from "@mbfarias/botscript-runtime";

const r = $match(v, [
  [$tagMatch("Tag", []), () => (1)],
  [$tagMatch("Bag", ["x", "y"]), ({ x, y }: any) => (x + y)],
  [$literalMatch("lit"), () => (2)],
  [$wildcard(), () => (0)],
]);
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > optional chaining foo?.bar is preserved 1`] = `
"
const x = foo?.bar;
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > pure { } at expression position 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

const x = $enter([] as const, () => { return 1 + 2; });
"
`;

exports[`forward-compat: ?bs 0.1 output is frozen > test "name" { body } rewrites to $test 1`] = `
"import { $assert, $test } from "@mbfarias/botscript-runtime";

$test("ok", async () => { $assert(1 === 1); });
"
`;

exports[`forward-compat: ?bs 0.2 output is frozen > fn that declares a capability it uses (cap-check passes) 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function now(): number {
  return $enter(["time"] as const, () => {

      return time.now();

  });
}
"
`;

exports[`forward-compat: ?bs 0.2 output is frozen > integration: tagged union + match + cap-check + test with mocks 1`] = `
"import { $assert, $enter, $match, $tagMatch, $test, $withMocks } from "@mbfarias/botscript-runtime";

type Status = { kind: "Idle" } | { kind: "Done"; value: string };

function label(s: Status): string {
  return $enter([] as const, () => {
    return $match(s, [
  [$tagMatch("Idle", []), () => ("-")],
  [$tagMatch("Done", ["value"]), ({ value }: any) => (value)],
]);
  });
}

function loadOne(url: string): string {
  return $enter(["net"] as const, () => {

      return http.get(url) as unknown as string;

  });
}

$test("labels", async () => { await $withMocks(["time"] as const, async () => {
  $assert(label({ kind: "Idle" }) === "-");
}); });
"
`;

exports[`forward-compat: ?bs 0.2 output is frozen > tagged union mixing bare and field-bearing alternatives 1`] = `
"
type Status = { kind: "Idle" } | { kind: "Loading" } | { kind: "Done"; value: string } | { kind: "Failed"; error: string };
"
`;

exports[`forward-compat: ?bs 0.2 output is frozen > tagged union with field-bearing alternatives 1`] = `
"
type Shape = { kind: "Circle"; r: number } | { kind: "Square"; side: number };
"
`;

exports[`forward-compat: ?bs 0.2 output is frozen > test with mocks { time } 1`] = `
"import { $assert, $test, $withMocks } from "@mbfarias/botscript-runtime";

$test("deterministic clock", async () => { await $withMocks(["time"] as const, async () => {
  $assert(time.now() === 0);
  $assert(time.now() === 1);
}); });
"
`;

exports[`forward-compat: ?bs 0.2 output is frozen > test with mocks { time, random } 1`] = `
"import { $assert, $test, $withMocks } from "@mbfarias/botscript-runtime";

$test("deterministic both", async () => { await $withMocks(["time", "random"] as const, async () => {
  $assert(time.now() === 0);
  $assert(random.next() === 0);
}); });
"
`;

exports[`forward-compat: ?bs 0.3 output is frozen > Result.try { body } 1`] = `
"import { $resultTry } from "@mbfarias/botscript-runtime";

const r = $resultTry(() => { return JSON.parse(input); });
"
`;

exports[`forward-compat: ?bs 0.3 output is frozen > Result.tryAsync { body } 1`] = `
"import { $resultTryAsync } from "@mbfarias/botscript-runtime";

const r = $resultTryAsync(async () => { return fetch(url); });
"
`;

exports[`forward-compat: ?bs 0.3 output is frozen > capability inference: same-file call graph propagates correctly 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function helper(s: string): string {
  return $enter([] as const, () => {
    return s.trim();
  });
}
function outer(s: string): string {
  return $enter([] as const, () => {

      return helper(s);

  });
}
"
`;

exports[`forward-compat: ?bs 0.3 output is frozen > integration: unsafe + Result.try + cap inference 1`] = `
"import { $enter, $resultTry } from "@mbfarias/botscript-runtime";

function parseConfig(raw: string): Result<Config, string> {
  return $enter([] as const, () => {

            const __r1 = $resultTry(() => { return JSON.parse(raw); });
      if (__r1.kind === "err") return __r1;
      let parsed = __r1.value;
      let p = /* unsafe: "JSON.parse returns any" */ (() => { return (parsed as { port?: number }).port; })();
      return typeof p === "number" ? ok({ port: p }) : err("missing port");

  });
}
"
`;

exports[`forward-compat: ?bs 0.3 output is frozen > transitive capability inference passes when callees match 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function doFetch(url: string): string {
  return $enter(["net"] as const, () => {

      const res = http.get(url);
      return "x";

  });
}
function loadOne(url: string): string {
  return $enter(["net"] as const, () => {

      return doFetch(url);

  });
}
"
`;

exports[`forward-compat: ?bs 0.3 output is frozen > unsafe block with justification 1`] = `
"
const u = /* unsafe: "third-party types Response as any" */ (() => { return value as User })();
"
`;

exports[`forward-compat: ?bs 0.4 output is frozen > 0.3 program compiled at 0.4 produces 0.3 output (additive only) 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function slug(s: string): string {
  return $enter([] as const, () => {
    return s.toLowerCase();
  });
}
"
`;

exports[`forward-compat: ?bs 0.4 output is frozen > async generic fn 1`] = `
"import { $enter, http } from "@mbfarias/botscript-runtime";

async function fetchOne<T>(url: string): Promise<T> {
  return $enter(["net"] as const, async () => {

      const r = http.get(url);
      return r as T;

  });
}
"
`;

exports[`forward-compat: ?bs 0.4 output is frozen > fn with multiple type parameters and constraints 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function pick<A extends number, B = string>(a: A, b: B): [A, B] {
  return $enter([] as const, () => {
    return [a, b];
  });
}
"
`;

exports[`forward-compat: ?bs 0.4 output is frozen > fn with single type parameter 1`] = `
"import { $enter } from "@mbfarias/botscript-runtime";

function id<T>(x: T): T {
  return $enter([] as const, () => {
    return x;
  });
}
"
`;
